<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_click_me"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_click_text"/>
    <Button
        android:id="@+id/btn_send_cmd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/send_cmd_text"/>
    <Button
        android:id="@+id/btn_read_cmd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cmd_read_text"/>
    <Button
        android:id="@+id/btn_parse_cmd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/cmd_parse_text"/>

</LinearLayout>