<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.BTMainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/fragment_container"
        android:background="@android:color/holo_red_dark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_device_list_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/bt_page_device_list_text"
            android:background="#0066cc"/>


        <Button
            android:id="@+id/btn_dialpad_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/bt_page_dialpad_text"
            android:background="#0066cc"/>

        <Button
            android:id="@+id/btn_contacts_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/bt_page_contacts_text"
            android:background="#0066cc"/>

        <Button
            android:id="@+id/btn_callrecord_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/bt_page_callrecord_text"
            android:background="#0066cc"/>

        <Button
            android:id="@+id/btn_musicplayer_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/bt_page_musicplayer_text"
            android:background="#0066cc"/>

        <Button
            android:id="@+id/btn_setting_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/bt_page_setting_text"
            android:background="#0066cc"/>
    </LinearLayout>

</LinearLayout>